# CMakeProjectTemplate

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/CMakeTemplateLib/: CMakeLists.txt
lib/CMakeTemplateLib/include/: TemplatePublicHeader.h
lib/CMakeTemplateLib/src/: TemplatePrivateClass.cpp  TemplatePrivateClass.h  TemplateSourceFile.cpp
